tests/valid/06_expr_aritm.patito
programa exprAritm;
vars
    x : entero;
inicio
{
    x = 1 + 2 * 3;
    x = (1 + 2) * 3;
    x = 10 - 3 - 2;
    x = 8 / 2 / 2;
    x = -5 + 3;
    x = +7;
    x = (x + 1) * (x - 1);
}
fin
