tests/invalid/03_paren_desbalanceado.patito
programa parenDesb;
vars
    x : entero;
inicio
{
    x = (1 + 2 * 3;
}
fin
